fixed overflowing width issue occuring in footer

--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ nav a p {
 
 main {
   margin-left: 120px;
+  padding-inline: 16px;
 }
 
 #home {
@@ -125,11 +126,6 @@ main {
   margin: 10px 0;
   padding: 16px 0;
 }
-
-/* #about h3:first-of-type {
-  margin: 10px 0;
-  padding: 16px 0;
-} */
 
 .skills-container {
   display: flex;
@@ -191,11 +187,6 @@ main {
   border: none;
   margin-bottom: 24px;
 }
-
-/* #about h3:nth-of-type(2) {
-  margin: 10px 0;
-  padding: 16px 0;
-} */
 
 .price-container {
   display: flex;
@@ -353,9 +344,11 @@ main {
 
 footer {
   color: #666666;
-  width: 980px;
+  max-width: 980px;
+  width: 100%;
   margin-inline: auto;
   padding-bottom: 128px;
+  padding-inline: 16px;
 }
 
 footer i {
